# wekan_cli

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: API_ROUTES.md  EDIT_ROUTES.md  openapi.yaml
src/wekan/: __init__.py  cli.py  client.py  utils.py
src/wekan/cli/: cli.py  utils.py
src/wekan/cli/handlers/: __init__.py  _helpers.py  api.py  archive.py  create.py  delete.py  edit.py  get.py  list.py  login.py
src/wekan/client/: __init__.py  client.py  types.py
src/wekan_cli/: __init__.py  cli.py
tests/: conftest.py  test_client.py  test_config.json.example  test_merge_fields.py
wekan_cli/: cli.py  client.py
