[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wekan-cli"
dynamic = ["version"]
description = "Command line client for WeKan REST API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "madsmith"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "click>=8.1.0,<9.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
wekancli = "wekan_cli.cli:main"

[project.urls]
Homepage = "https://github.com/madsmith/wekan_cli"
Repository = "https://github.com/madsmith/wekan_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["wekan_cli*"]

[tool.setuptools.dynamic]
version = {attr = "wekan_cli.__version__"}
